--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@types/react": "19.1.9",
+   "@types/react": "^18.0.0",
     "prisma": "^5.11.0",
     "typescript": "5.8.3"
   }
