--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
   "devDependencies": {
    "@types/react": "^18.0.0",
     "prisma": "^5.11.0",
-    "typescript": "5.8.3"
+    "typescript": "^5.0.0"
   }
 }
